# server

./: .gitignore  pyproject.toml  setup.cfg
src/config/: settings.py
